[build-system]
requires = [
  "setuptools>=64",
  "setuptools_scm[toml]>=8",
]
build-backend = "setuptools.build_meta"

[tool.packaging]
github_org = "prjemian"
copyright = "2014-2022, Pete R. Jemian"

[project]
name = "murky"
dynamic = ["version"]
description = "The murky package provides tools for working with conda packages."
authors = [
  { name="Pete R. Jemian", email="prjemian+murky@gmail.com" },
]
maintainers = [
  { name="Pete R. Jemian", email="prjemian+murky@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.7"
keywords = ["python", "conda", "development", "utilities"]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/?highlight=license
license = {file = "LICENSE"}
# https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: Freely Distributable",
  "License :: Public Domain",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development",
  "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://prjemian.github.io/murky/"
"Bug Tracker" = "https://github.com/prjemian/murky/issues"

[project.scripts]
create_release_notes = "murky.create_release_notes:main"
murky_tool = "murky.murky_tool:main"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E501"]

[tool.isort]
force_single_line = true
# multi_line_output = 1
line_length = 88
include_trailing_comma = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.setuptools]
script-files = ["murky/murky_create.sh"]

[tool.setuptools_scm]
