[metadata]
description_file = README.md

[egg_info]
tag_build =
tag_date = false

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = boiga/_version.py
versionfile_build = boiga/_version.py
tag_prefix =
parentdir_prefix = boiga-

[aliases]
release = egg_info -RDb ''

[coverage:run]
#source = tests/test_results.py
#include = boiga/create_release_notes.py
omit =
    # omit anything under the installed packages directory
    */site-packages/*
    # omit these individual files
    boiga/_version.py
