[metadata]
description_file = README.md

[egg_info]
tag_build =
tag_date = false

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = water_moccasin/_version.py
versionfile_build = water_moccasin/_version.py
tag_prefix =
parentdir_prefix = water_moccasin-

[aliases]
release = egg_info -RDb ''

[coverage:run]
#source = tests/test_results.py
#include = water-moccasin/create_release_notes.py
omit =
    # omit anything under the installed packages directory
    */site-packages/*
    # omit these individual files
    water-moccasin/_version.py
