[metadata]
description_file = README.md

[egg_info]
tag_build =
tag_date = false

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = murky/_version.py
versionfile_build = murky/_version.py
tag_prefix =
parentdir_prefix = murky-

[aliases]
release = egg_info -RDb ''

[coverage:run]
#source = tests/test_results.py
#include = murky/create_release_notes.py
omit =
    # omit anything under the installed packages directory
    */site-packages/*
    # omit these individual files
    murky/_version.py
